fix styling, making text more legible

--- a/css/index.css
+++ b/css/index.css
@@ -21,23 +21,20 @@ html {
 
 .canvas-container > p {
   color: white;
-  font-size: 20px;
+  font-size: 15px;
 }
 
 .game-info {
-  color: #563c5c;
-  font-size: 30px;
-  margin: auto;
+  color: white;
+  font-size: 20px;
   width: 200px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0px 0px 0px 10px #453948c7;
+  padding-left: 20px;
+  padding-top: 15px;
 }
 
 .my-info {
   color: white;
+  font-size: 15px;
 }
 
 .up {
@@ -60,9 +57,8 @@ html {
 }
 
 .game-title {
-  color: #563c5c;
-  font-size: 40px;
-  padding-left: 175px;
+  color: white;
+  font-size: 20px;
 }
 .linkedIn {
   width: 60px;
@@ -86,4 +82,8 @@ html {
 
 audio {
   display: none;
+}
+
+p {
+  color: white;
 }
